<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ahrs_package</name>
  <version>0.0.0</version>
  <description>AHRS output string parser and acquisitor</description>
  <maintainer email="macibol775@student.polsl.pl">Maciej B.</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
	
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
